--- a/Nosotros.html
+++ b/Nosotros.html
@@ -12,6 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nemo, neque doloribus hic consequatur architecto
         recusandae. Placeat atque, inventore beatae dolorem, quia nam, itaque repellat cumque ducimus iure cum officiis.
     </p>
+    <h1>hola</h1>
 </body>
 
 </html>
