--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>hola</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus molestiae qui molestias illo, optio mollitia laudantium repellendus, earum impedit alias quas maxime minima tempore. Tenetur tempore voluptas dicta dolorem facere.</p>
+    <a href="contactos.html">contactos</a>
 </body>
 </html>
